--- a/README.Rmd
+++ b/README.Rmd
@@ -330,12 +330,9 @@ applyDf %>% gather(key = "land-cover option", value = "land-cover share", -u, -b
 
 *Fig. 5: Theoretically ideal farm compositions under increasing levels of uncertainty.*
 
-Solving the portfolio (Fig. 5) under increasing assumptions for the uncertainty levels (uValue, respectively $f_u$ in equation 4 (Husmann et al, n.d.)) gives the sensitivity of the land-cover compositions towards increasing aversion of risk of the farmer. The higher the uncertainty level, the higher the uncertainty spaces of the indicators. Here, the composition of land-cover alternatives is quite stable across different uncertainty levels (Fig. 5). Comparing portfolios of u-value 0 with u-value 3, the share of forest decreases from 41.2% to 34.3%, silvopasture from 45.9% to 44.9%, and the share of crops from 12.9% to 1%. At the same time, the shares of pasture increased from 0% to 9.6% and of plantation from 0% to 10.2%.
+Solving the portfolio (Fig. 5) under increasing assumptions for the uncertainty levels (uValue, respectively $f_u$ in equation 4 (Husmann et al, n.d.)) gives the sensitivity of the land-cover compositions towards increasing aversion of risk of the farmer. The higher the uncertainty level, the higher the uncertainty spaces of the indicators. Here, the composition of land-cover alternatives is quite stable across different uncertainty levels (Fig. 5). Comparing portfolios of u-value 0 with u-value 3, the share of forest decreases slightly from 41.2% to 34.3%, silvopasture from 45.9% to 44.9%. The share of crops decreases from 12.9% to 1%. At the same time, the shares of pasture increased from 0% to 9.6% and of plantation from 0% to 10.2%.
 
-Alley cropping does not appear in the portfolios at any uncertainty level. This is due to the fact that it is not defined as the best land-cover type in any indicator. Each indicator is better provided by at least one another land-cover one then alley cropping. Also it is the worst (highest) contribution to management complexity. It therefore would provide negatively to one indicator, while not providing any best contribution. 
-
-This overall negative contribution appears for all uncertainty level. Similar appears for plantation. It is not part of the portfolio till an uncertainty level of 1.5. It only provides best to the long-term income, while providing by far worst to the general preferences. 
-
+Alley cropping does not appear in any portfolio at any uncertainty level. This is due to the fact that it is not defined as the best land-cover type in any indicator. Each indicator is better provided by at least one another land-cover one then alley cropping. Also it is the worst (highest) contribution to management complexity. It therefore would provide negatively to one indicator, while not providing any best contribution. This overall negative contribution appears for all uncertainty levels. Similar appears for plantation. It is not part of the portfolio till an uncertainty level of 1.5. It only provides best to the long-term income, while providing by far worst to the general preferences and also providing generally only minor contributions to the indicators.
 
 By trend, higher uncertainty levels lead to more diverse portfolios. The uncertainty spaces of all indicators increase with increasing uncertainty levels. These broadened individual uncertainty spaces then lead to a broader state space with a higher number of possible candidates for lowest-performing scenarios (i.e. scenarios that can under lower uncertainty not become part of the solution, as their distances could not be the maximum distance of any land-cover composition).
 
