--- a/README.Rmd
+++ b/README.Rmd
@@ -169,7 +169,7 @@ result$landUse %>% gather(key = landCoverOption, value = landCoverShare, 1 : 6) 
 
 *Fig. 2: Composition of the optimized farm (based on data of Gosling et al. (2020)), including all indicators. Each land-cover option is shown in an allocated share (%).*
 
-The resulting optimized farm composition (Fig. 2) corresponds to Fig. 3 ($f_u=2$) in Gosling et al. (2020). It can be seen that the farm composition that best fulfills all 10 indicators (i.e. the multi-functional portfolio) is dominated by silvopasture and forest. According to Gosling et al. (2020), this reveals the potential of agroforestry to serve as a compromise solution to fulfill multiple ecological and economic functions. Recently, however, the average farm portfolio of the surveyed farms was mainly composed of pasture and cropland with only a small share of forest (14 %). This reveals that not all of the selected objectives (and their weights) currently drive farmers' land-cover decisions. The optimization approach can then be used to dive deeper into the effect of different goals on the resulting optimized land-cover composition and the effects of uncertainty.
+The resulting optimized farm composition (Fig. 2) corresponds to Fig. 3 ($f_u=2$) in Gosling et al. (2020). It can be seen that the farm composition that best fulfills all 10 indicators (i.e. the multi-functional portfolio) is dominated by silvopasture and forest. According to Gosling et al. (2020), this reveals the potential of agroforestry to serve as a compromise solution to fulfill multiple ecological and economic functions. Recently, however, the average farm portfolio of the surveyed farms was mainly composed of pasture and cropland with only a small share of forest (14%). This reveals that not all of the selected objectives (and their weights) currently drive farmers' land-cover decisions. The optimization approach can then be used to dive deeper into the effect of different goals on the resulting optimized land-cover composition and the effects of uncertainty.
 
 ### Calculating the Portfolio Performances of the Optimized *optimLanduse* Object
 
@@ -274,9 +274,7 @@ ggplot(performance_current$scenarioTable,
 
 Setting the arguments for the lower and upper bounds exactly to the currently observed land-cover composition forces a solution that corresponds to the current land-cove composition (Fig. 4). It allows to compare and evaluate the differences of the optimized land-cover composition with the currently observed composition. Comparing e.g. the guaranteed performances $1-\beta$ provides objective measure how an optimization enhances the achievements of the overall performance. A deeper look at the performances of the indicators reveals which indicators particularly benefit from optimization. Due to the compromise nature of the approach, indicators can also fall off in the optimized portfolio.
 
-The Comparing the current land-cover composition with the multi-functional portfolio
-
-Amounting to 0.37, the guaranteed performance of the multi-functional portfolio is considerably higher then the guaranteed performance of the current land-cover composition (0.09). Each of the indicators considered is thus fulfilled by at least 37 % compared to its individual achievable level in the optimized portfolio. The comparison of the performances of the currently observed land-cover composition (Fig. 4) with the performances of the multi-functional portfolio (Fig. 3) reveals that, for example, the performance of the financial stability is significantly higher in the optimized portfolio. The performance of meeting households needs and liquidity, for example, decreases significantly. The price to be paid for the best-possible compromise is thus a fundamentally lower performance of the both indicators that approximate the immediate economic success. The generally desirable multi-functional portfolio therefore does not promise immediate economic success for the farmers.
+Amounting to 0.387, the guaranteed performance of the multi-functional portfolio is considerably higher then the guaranteed performance of the current land-cover composition (0.089). Each of the indicators considered is thus fulfilled by at least 38.7% compared to its maximum individual achievable level in the optimized portfolio. The comparison of the performances of the currently observed land-cover composition (Fig. 4) with the performances of the multi-functional portfolio (Fig. 3) reveals that, for example, the performance of the financial stability is significantly higher in the optimized portfolio. The performance of meeting households needs and liquidity, for example, decreases significantly. The price to be paid for the best-possible compromise is thus a fundamentally lower performance of the both indicators that approximate the immediate economic success. The generally desirable multi-functional portfolio therefore does not promise immediate economic success for the farmers.
 
 
 <h3>
